@@ -1,3 +1,7 @@
+2010-06-14  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
+
+	* build/snapshot-deb.sh: Update Debian packaging script.
+
 2010-05-12  Youchen Lee  <copyleft@utcr.org>
 
 	* src/mainframe.cpp (CMainFrame::CMainFrame): Set the focus chain 
